--- a/.github/workflows/c-build.yml
+++ b/.github/workflows/c-build.yml
@@ -9,10 +9,10 @@ on:
 jobs:
   build:
 
-    runs-on: windows-2019
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
       
-    - name: make
-      run:  make
+    - name: make all
+      run:  make 
